overflow fix and no live link fix

--- a/Styles/global/_defaults.less
+++ b/Styles/global/_defaults.less
@@ -8,6 +8,10 @@ body {
     overflow-x: hidden;
 }
 
+.wrapper-style {
+    overflow-x: hidden;
+}
+
 .page-wrapper {
     padding-top: 58px;
     overflow: hidden;
